Some Java 23 features